some visual fixes

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 </div>
             </div>
             <div class="main-profile_line-separator"></div>
-            <div class="main-profile_column">
-                <p>643</p>
+            <div class="main-profile_column column-format">
+                <p class="main-profile_numbers">643</p>
                 <div class="main-profile_second-text">
-                    <p>followers</p>
+                    <p class="column-format-follows">followers</p>
                 </div>
             </div>
             <div class="main-profile_line-separator"></div>
-            <div class="main-profile_column">
-                <p>108</p>
+            <div class="main-profile_column column-format">
+                <p class="main-profile_numbers">108</p>
                 <div class="main-profile_second-text">
-                    <p>following</p>
+                    <p class="column-format-follows">following</p>
                 </div>
             </div>
             <div class="main-profile_follow-button">
