some visual fixes

--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
                 <p class="main-comment-button_format">January 3 at 6:42pm - Liked - Reply</p>
             </div>
         </div>
-        <div class="main-comment_line-separator"></div>
+        <div class="main-comment_line-separator last-line-separator"></div>
         <div class="button"><button class="button-load_more">Load More ...</button></div>
-        
     </main>
     <footer></footer>
 </body>
